--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -25,8 +25,8 @@ By the end of the chapter, readers will be able to:
 - Describe what a training data set is and how it is used in classification
 - Interpret the output of a classifier
 - Compute, by hand, the straight-line (Euclidean) distance between points on a graph when there are two predictor variables
-- Explain the K-nearest neighbor classification algorithm
-- Perform K-nearest neighbor classification in R using `tidymodels`  
+- Explain the $K$-nearest neighbor classification algorithm
+- Perform $K$-nearest neighbor classification in R using `tidymodels`  
 - Use a `recipe` to preprocess data to be centered, scaled, and balanced
 - Combine preprocessing and model training using a `workflow`
 
@@ -53,7 +53,7 @@ the classifier to make predictions on new data for which we do not know the clas
 
 There are many possible methods that we could use to predict
 a categorical class/label for an observation. In this book, we will
-focus on the widely used **K-nearest neighbors** algorithm.
+focus on the widely used **$K$-nearest neighbors** algorithm.
 In your future studies, you might encounter decision trees, support vector machines (SVMs),
 logistic regression, neural networks, and more; see the additional resources
 section at the end of the next chapter for where to begin learning more about
@@ -221,7 +221,7 @@ a standardized perimeter value of -1 and a concavity value of -0.5? What about 0
 Based on our visualization, it seems
 like the *prediction of an unobserved label* might be possible.
 
-## Classification with K-nearest neighbors
+## Classification with $K$-nearest neighbors
 
 ```{r 05-knn-0, echo = FALSE}
 ## Find the distance between new point and all others in data set
@@ -255,15 +255,15 @@ neighbors <- cancer[order(my_distances$Distance), ]
 
 In order to actually make predictions for new observations in practice, we
 will need a classification algorithm. 
-In this book, we will use the K-nearest neighbors classification algorithm.
+In this book, we will use the $K$-nearest neighbors classification algorithm.
 To predict the label of a new observation (here, classify it as either benign
-or malignant), the K-nearest neighbors classifier generally finds the $K$
+or malignant), the $K$-nearest neighbors classifier generally finds the $K$
 "nearest" or "most similar" observations in our training set, and then uses
 their diagnoses to make a prediction for the new observation's diagnosis. $K$ 
 is a number that we must choose in advance; for now, we will assume that someone has chosen
 $K$ for us. We will cover how to choose $K$ ourselves in the next chapter. 
 
-To illustrate the concept of K-nearest neighbors classification, we 
+To illustrate the concept of $K$-nearest neighbors classification, we 
 will walk through an example.  Suppose we have a
 new observation, with perimeter of `r new_point[1]` and concavity of `r new_point[2]`, whose 
 diagnosis "Class" is unknown. This new observation is depicted by the red, diamond point in
@@ -489,7 +489,7 @@ perim_concav + annotate("path",
 ### More than two explanatory variables 
 
 Although the above description is directed toward two predictor variables, 
-exactly the same K-nearest neighbors algorithm applies when you
+exactly the same $K$-nearest neighbors algorithm applies when you
 have a higher number of predictor variables (i.e., a higher-dimensional
 predictor space).  Each predictor variable may give us new
 information to help create our classifier.  The only difference is the formula
@@ -505,16 +505,18 @@ The distance formula becomes
 $$\mathrm{Distance} = \sqrt{(a_{1} -b_{1})^2 + (a_{2} - b_{2})^2 + \dots + (a_{m} - b_{m})^2}.$$
 
 This formula still corresponds to a straight-line distance, just in a space with 
-more dimensions. Let's say we have three predictor
-variables, perimeter, concavity, and symmetry (so, a 3-dimensional space) for two observations where
-$\mathrm{observation}_1 = (0.417, 2.31, 0.837)$ and $\mathrm{observation}_{new} = (0, 3.5, 1)$.
+more dimensions. Suppose we want to calculate the distance between a new observation 
+that we want to classify with a perimeter of 0, concavity of 3.5 and symmetry of 1 and
+another observation with a perimeter, concavity and symmetry of 0.417, 2.31 and 0.837 respectively. 
+We have three predictor variables, perimeter, concavity, and symmetry (so, a 3-dimensional space) for two observations where
+$\mathrm{observation}_{old} = (0.417, 2.31, 0.837)$ and $\mathrm{observation}_{new} = (0, 3.5, 1)$.
 Previously, when we had two variables, we added up the squared difference between each of our (two) variables,
 and then took the square root. Now we will do the same, except for our
 three variables.  We calculate the distance as follows
 
-$$\mathrm{Distance} =\sqrt{(0 - 0.417)^2 + (3.5 - 2.31)^2 + (1 - 0.837)^2} = 1.27$$.
+$$\mathrm{Distance} =\sqrt{(0 - 0.417)^2 + (3.5 - 2.31)^2 + (1 - 0.837)^2} = 1.27.$$
 In this case, the formula above is just the straight line distance in this 3-dimensional space.
-Let's calculate the distances between our new observation (with a perimeter of 0, concavity of 3.5 and symmetry of 1) and each of the observations in the training set to find the $K=5$ neighbors when we have three predictors: perimeter, concavity and symmetry. 
+Let's calculate the distances between our new observation and each of the observations in the training set to find the $K=5$ neighbors when we have these three predictors. 
 ```{r}
 new_obs_Perimeter <- 0
 new_obs_Concavity <- 3.5
@@ -572,9 +574,9 @@ general we recommend against using 3D visualizations; here we show the data in
 for learning purposes.*
 
 
-### Summary of K-nearest neighbors algorithm
+### Summary of $K$-nearest neighbors algorithm
 
-In order to classify a new observation using a K-nearest neighbor classifier, we have to:
+In order to classify a new observation using a $K$-nearest neighbor classifier, we have to:
 
 1. Compute the distance between the new observation and each observation in the training set.
 2. Sort the data table in ascending order according to the distances.
@@ -582,12 +584,12 @@ In order to classify a new observation using a K-nearest neighbor classifier, we
 4. Classify the new observation based on a majority vote of the neighbor classes.
 
 
-## K-nearest neighbors with `tidymodels`
+## $K$-nearest neighbors with `tidymodels`
 
-Coding the K-nearest neighbors algorithm in R ourselves can get complicated,
+Coding the $K$-nearest neighbors algorithm in R ourselves can get complicated,
 especially if we want to handle multiple classes, more than two variables,
 or predicting the class for multiple new observations. Thankfully, in R,
-the K-nearest neighbors algorithm is implemented in the `parsnip` package 
+the $K$-nearest neighbors algorithm is implemented in the `parsnip` package 
 included in the 
 [`tidymodels` meta package](https://www.tidymodels.org/), along with 
 many [other models](https://www.tidymodels.org/find/parsnip/)
@@ -601,7 +603,7 @@ start off by loading `tidymodels`.
 library(tidymodels)
 ```
 
-Let's walk through how to use `tidymodels` to perform K-nearest neighbors classification. 
+Let's walk through how to use `tidymodels` to perform $K$-nearest neighbors classification. 
 We will use the cancer data set from above, with
 perimeter and concavity as predictors and $K = 5$ neighbors to build our classifier. Then
 we will use the classifier to predict the diagnosis label for a new observation with
@@ -614,7 +616,7 @@ cancer_train <- cancer |>
 cancer_train
 ```
 
-Next, we create a *model specification* for K-nearest neighbors classification
+Next, we create a *model specification* for $K$-nearest neighbors classification
 by calling the `nearest_neighbor` function, specifying that we want to use $K = 5$ neighbors
 (we will discuss how to choose $K$ in the next chapter) and the straight-line 
 distance (`weight_func = "rectangular"`). The `weight_func` argument controls
@@ -623,7 +625,7 @@ each of the $K$ nearest neighbors gets exactly 1 vote as described above. Other 
 which weight each neighbor's  vote differently, can be found on 
 [the tidymodels website](https://parsnip.tidymodels.org/reference/nearest_neighbor.html).
 In the `set_engine` argument, we specify which package or system will be used for training
-the model. In this case, `kknn` is an R package for performing k-nearest neighbors classification.
+the model. In this case, `kknn` is an R package for performing $K$-nearest neighbors classification.
 Finally we specify that this is a classification problem with the `set_mode` function.
 
 ```{r 05-tidymodels-3}
@@ -665,7 +667,7 @@ let R find the $K$ value for us.
 
 Finally, we make the prediction on the new observation by calling the `predict` function,
 passing both the fit object we just created and the new observation itself. As above 
-when we ran the K-nearest neighbors
+when we ran the $K$-nearest neighbors
 classification algorithm manually, the `knn_fit` object classifies the new observation as 
 malignant ("M"). Note that the `predict` function outputs a data frame with a single 
 variable named `.pred_class`.
@@ -683,7 +685,7 @@ learn ways to quantify how accurate we think our predictions are.
 
 ### Centering and scaling
 
-When using K-nearest neighbor classification, the *scale* of each variable
+When using $K$-nearest neighbor classification, the *scale* of each variable
 (i.e., its size and range of values) matters. Since the classifier predicts
 classes by identifying observations that are nearest to it, any variables that
 have a large scale will have a much larger effect than variables with a small
@@ -704,7 +706,7 @@ degrees Celcius, the two variables would differ by a constant shift of 273
 hypothetical job classification example, we would likely see that the center of
 the salary variable is in the tens of thousands, while the center of the years
 of education variable is in the single digits. Although this doesn't affect the
-K-nearest neighbor classification algorithm, this large shift can change the
+$K$-nearest neighbor classification algorithm, this large shift can change the
 outcome of using many other predictive models. 
 
 To scale and center our data, we need to find
@@ -712,7 +714,7 @@ our variables' mean and standard deviation (a number measuring how spread out va
 For each observed value of the variable, we subtract the mean (center the variable) 
 and divide by the standard deviation (scale the variable). When we do this, the data 
 is said to be *standardized*, and all variables in a data set will have a mean of 0 
-and a standard deviation of 1. To illustrate the effect that standardization can have on the K-nearest
+and a standard deviation of 1. To illustrate the effect that standardization can have on the $K$-nearest
 neighbor algorithm, we will read in the original, unscaled Wisconsin breast
 cancer data set; we have been using a standardized version of the data set up
 until now. To keep things simple, we will just use the `Area`, `Smoothness`, and `Class`
@@ -785,7 +787,7 @@ say, new data that you want to predict, which were not part of the training set.
 
 At this point, you may wonder why we are doing so much work just to center and
 scale our variables.  Can't we just manually scale and center the `Area` and
-`Smoothness` variables ourselves before building our KNN model? Well,
+`Smoothness` variables ourselves before building our $K$-nearest neighbor model? Well,
 technically *yes*; but doing so is error-prone.  In particular, we might
 accidentally forget to apply the same centering / scaling when making
 predictions, or accidentally apply a *different* centering / scaling than what
@@ -898,7 +900,7 @@ gridExtra::grid.arrange(unscaled, scaled, ncol = 2)
 ```{r 05-scaling-plt-zoomed, fig.height = 4, fig.width = 10, echo = FALSE, fig.cap = "Close up of three nearest neighbors for unstandardized data"}
 library(ggforce)
 ggplot(unscaled_cancer, aes(x = Area, y = Smoothness, group = Class, color = Class, shape = Class)) +
-  geom_point(size = 2.5, alpha = 0.8) + 
+  geom_point(size = 2.5, alpha = 0.6) + 
   scale_color_manual(name = "Diagnosis", 
                      labels = c("Benign", "Malignant", "Unknown"), 
                      values = c("steelblue2", "orange2", "red")) +
@@ -931,7 +933,7 @@ ggplot(unscaled_cancer, aes(x = Area, y = Smoothness, group = Class, color = Cla
 
 Another potential issue in a data set for a classifier is *class imbalance*,
 i.e., when one label is much more common than another. Since classifiers like
-the K-nearest neighbor algorithm use the labels of nearby points to predict
+the $K$-nearest neighbor algorithm use the labels of nearby points to predict
 the label of a new point, if there are many more data points with one label
 overall, the algorithm is more likely to pick that label in general (even if
 the "pattern" of data suggests otherwise). Class imbalance is actually quite a
@@ -975,7 +977,7 @@ rare_plot
 > random numbers, if you want *the same result* each time, you should use
 > `set.seed`; if you want a *different result* each time, you should not.
 
-Suppose we now decided to use $K = 7$ in K-nearest neighbor classification.
+Suppose we now decided to use $K = 7$ in $K$-nearest neighbor classification.
 With only 3 observations of malignant tumors, the classifier 
 will *always predict that the tumor is benign, no matter what its concavity and perimeter
 are!* This is because in a majority vote of 7 observations, at most 3 will be
@@ -1030,7 +1032,7 @@ rare_plot + geom_point(aes(x = new_point[1], y = new_point[2]),
 </center>
 
 Figure \@ref(fig:05-upsample-2) shows what happens if we set the background colour of 
-each area of the plot to the predictions the K-nearest neighbor 
+each area of the plot to the predictions the $K$-nearest neighbor 
 classifier would make. We can see that the decision is 
 always "benign," corresponding to the blue colour.
 
@@ -1066,7 +1068,7 @@ Despite the simplicity of the problem, solving it in a statistically sound manne
 fairly nuanced, and a careful treatment would require a lot more detail and mathematics than we will cover in this textbook.
 For the present purposes, it will suffice to rebalance the data by *oversampling* the rare class.
 In other words, we will replicate rare observations multiple times in our data set to give them more
-voting power in the K-nearest neighbor algorithm. In order to do this, we will add an oversampling
+voting power in the $K$-nearest neighbor algorithm. In order to do this, we will add an oversampling
 step to the earlier `uc_recipe` recipe with the `step_upsample` function.
 We show below how to do this, and also
 use the `group_by` and `summarize` functions to see that our classes are now balanced:
@@ -1085,9 +1087,9 @@ upsampled_cancer |>
   group_by(Class) |>
   summarize(n = n())
 ```
-Now suppose we train our K-nearest neighbor classifier with $K=7$ on this *balanced* data. 
+Now suppose we train our $K$-nearest neighbor classifier with $K=7$ on this *balanced* data. 
 Figure \@ref(fig:05-upsample-plot) shows what happens now when we set the background colour 
-of each area of our scatter plot to the decision the K-nearest neighbor 
+of each area of our scatter plot to the decision the $K$-nearest neighbor 
 classifier would make. We can see that the decision is more reasonable; when the points are close
 to those labelled malignant, the classifier predicts a malignant tumor, and vice versa when they are 
 closer to the benign tumor observations.
@@ -1174,7 +1176,7 @@ prediction
 ```
 The classifier predicts that the first observation is benign ("B"), while the second is
 malignant ("M"). Figure \@ref(fig:05-workflow-plot-show) visualizes the predictions that this 
-trained K-nearest neighbor model will make on a large range of new observations.
+trained $K$-nearest neighbor model will make on a large range of new observations.
 Although you have seen coloured prediction map visualizations like this a few times now,
 we have not included the code to generate them, as it is a little bit complicated.
 For the interested reader who wants a learning challenge, we now include it below. 
