--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -532,7 +532,7 @@ cancer |>
 ```
 Based on $K=5$ nearest neighbors with these three predictors we would classify the new observation as malignant since 4 out of 5 of the nearest neighbors are malignant class. 
 Figure \@ref(fig:05-more) shows what the data look like when we visualize them 
-as a 3-dimensional scatter with lines corresponding to the five nearest neighbors.
+as a 3-dimensional scatter with lines from the new observation to its five nearest neighbors.
 
 ```{r 05-more, echo = FALSE, message = FALSE, fig.cap = "3D scatter plot of the symmetry, concavity, and perimeter variables."}
 library(plotly)
@@ -587,15 +587,15 @@ z5 <- c(pull(new_obs_3[3]), data$Symmetry[5])
 
 plot_3d  %>%
   add_trace(x = x1, y = y1, z = z1, type = "scatter3d", mode = "lines", 
-            name = "lines", showlegend = FALSE,   color = I("steelblue2")) %>%
+            name = "lines", showlegend = FALSE, color = I("steelblue2")) %>%
   add_trace(x = x2, y = y2, z = z2, type = "scatter3d", mode = "lines", 
-            name = "lines", showlegend = FALSE,  color =  I("steelblue2")) %>%
+            name = "lines", showlegend = FALSE, color =  I("steelblue2")) %>%
   add_trace(x = x3, y = y3, z = z3, type = "scatter3d", mode = "lines", 
-            name = "lines", showlegend = FALSE,   color =  I("steelblue2")) %>%
+            name = "lines", showlegend = FALSE, color =  I("steelblue2")) %>%
   add_trace(x = x4, y = y4, z = z4, type = "scatter3d", mode = "lines", 
-            name = "lines", showlegend = FALSE,   color =  I("orange2")) %>%
+            name = "lines", showlegend = FALSE, color =  I("orange2")) %>%
   add_trace(x = x5, y = y5, z = z5, type = "scatter3d", mode = "lines", 
-            name = "lines", showlegend = FALSE,   color =  I("steelblue2")) 
+            name = "lines", showlegend = FALSE, color =  I("steelblue2")) 
 ```
 
 *Click and drag the plot above to rotate it, and scroll to zoom. Note that in
@@ -626,18 +626,18 @@ many [other models](https://www.tidymodels.org/find/parsnip/)
  that you will encounter in this and future chapters of the book. The `tidymodels` collection
 provides tools to help make and use models, such as classifiers.  Using the packages
 in this collection will help keep our code simple, readable and accurate; the 
-less we have to code ourselves, the fewer mistakes we are likely to make. We 
-start off by loading `tidymodels`.
+less we have to code ourselves, the fewer mistakes we will likely make. We 
+start by loading `tidymodels`.
 
 ```{r 05-tidymodels, warning = FALSE, message = FALSE}
 library(tidymodels)
 ```
 
 Let's walk through how to use `tidymodels` to perform $K$-nearest neighbors classification. 
-We will use the cancer data set from above, with
+We will use the `cancer` data set from above, with
 perimeter and concavity as predictors and $K = 5$ neighbors to build our classifier. Then
 we will use the classifier to predict the diagnosis label for a new observation with
-perimeter 0, concavity 3.5, and an unknown diagnosis label. Let's pick out our 2 desired
+perimeter 0, concavity 3.5, and an unknown diagnosis label. Let's pick out our two desired
 predictor variables and class label and store it as a new dataset named `cancer_train`:
 
 ```{r 05-tidymodels-2}
@@ -652,11 +652,11 @@ by calling the `nearest_neighbor` function, specifying that we want to use $K = 
 distance (`weight_func = "rectangular"`). The `weight_func` argument controls
 how neighbors vote when classifying a new observation; by setting it to `"rectangular"`,
 each of the $K$ nearest neighbors gets exactly 1 vote as described above. Other choices, 
-which weight each neighbor's  vote differently, can be found on 
+which weigh each neighbor's vote differently, can be found on 
 [the tidymodels website](https://parsnip.tidymodels.org/reference/nearest_neighbor.html).
 In the `set_engine` argument, we specify which package or system will be used for training
 the model. In this case, `kknn` is an R package for performing $K$-nearest neighbors classification.
-Finally we specify that this is a classification problem with the `set_mode` function.
+Finally, we specify that this is a classification problem with the `set_mode` function.
 
 ```{r 05-tidymodels-3}
 knn_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = 5) |>
@@ -707,8 +707,10 @@ new_obs <- tibble(Perimeter = 0, Concavity = 3.5)
 predict(knn_fit, new_obs)
 ```
 
-Is this predicted label the true label? We don't know, because we do not have the 
-label&mdash this is what we were trying to predict. In the next chapter we will 
+Is this predicted malignant label the true class for this observation? 
+Well, we don't know because we do not have this
+observation's diagnosis&mdash; that is what we were trying to predict.
+In the next chapter, we will 
 learn ways to quantify how accurate we think our predictions are.
 
 ## Data preprocessing with `tidymodels`
@@ -717,11 +719,11 @@ learn ways to quantify how accurate we think our predictions are.
 
 When using $K$-nearest neighbor classification, the *scale* of each variable
 (i.e., its size and range of values) matters. Since the classifier predicts
-classes by identifying observations that are nearest to it, any variables that
-have a large scale will have a much larger effect than variables with a small
+classes by identifying observations nearest to it, any variables with 
+a large scale will have a much larger effect than variables with a small
 scale. But just because a variable has a large scale *doesn't mean* that it is
 more important for making accurate predictions. For example, suppose you have a
-data set with two attributes, salary (in dollars) and years of education, and
+data set with two features, salary (in dollars) and years of education, and
 you want to predict the corresponding type of job. When we compute the
 neighbor distances, a difference of \$1000 is huge compared to a difference of
 10 years of education. But for our conceptual understanding and answering of
@@ -732,7 +734,7 @@ In many other predictive models, the *center* of each variable (e.g., its mean)
 matters as well. For example, if we had a data set with a temperature variable
 measured in degrees Kelvin, and the same data set with temperature measured in
 degrees Celcius, the two variables would differ by a constant shift of 273
-(even though they contain exactly the same information). Likewise in our
+(even though they contain exactly the same information). Likewise, in our
 hypothetical job classification example, we would likely see that the center of
 the salary variable is in the tens of thousands, while the center of the years
 of education variable is in the single digits. Although this doesn't affect the
@@ -740,12 +742,12 @@ $K$-nearest neighbor classification algorithm, this large shift can change the
 outcome of using many other predictive models. 
 
 To scale and center our data, we need to find
-our variables' mean and standard deviation (a number measuring how spread out values are). 
+our variables' mean and *standard deviation* (a number quantifying how spread out values are). 
 For each observed value of the variable, we subtract the mean (center the variable) 
 and divide by the standard deviation (scale the variable). When we do this, the data 
 is said to be *standardized*, and all variables in a data set will have a mean of 0 
 and a standard deviation of 1. To illustrate the effect that standardization can have on the $K$-nearest
-neighbor algorithm, we will read in the original, unscaled Wisconsin breast
+neighbor algorithm, we will read in the original, unstandardized Wisconsin breast
 cancer data set; we have been using a standardized version of the data set up
 until now. To keep things simple, we will just use the `Area`, `Smoothness`, and `Class`
 variables:
@@ -757,12 +759,13 @@ unscaled_cancer <- read_csv("data/unscaled_wdbc.csv") |>
 unscaled_cancer
 ```
 
-Looking at the unscaled and uncentered data above, you can see that the difference
+Looking at the unscaled and uncentered data above, you can see that the differences
 between the values for area measurements are much larger than those for
-smoothness, and the mean appears to be much larger too. Will this affect
+smoothness. Will this affect
 predictions? In order to find out, we will create a scatter plot of these two
 predictors (coloured by diagnosis) for both the unstandardized data we just
-loaded, and the standardized version of that same data. 
+loaded, and the standardized version of that same data. But first, we need to
+standardize the `unscaled_cancer` data set with `tidymodels`.
 
 In the `tidymodels` framework, all data preprocessing happens 
 using a [`recipe`](https://tidymodels.github.io/recipes/reference/index.html).
@@ -803,17 +806,18 @@ For example:
 You can find [a full set of all the steps and variable selection functions](https://tidymodels.github.io/recipes/reference/index.html)
 on the recipes home page.
 
-Here we are calculated the required statistics based off the data input into the recipe, but
-the data are not yet scaled and centered. In order to actually scale and center the data 
-we need to apply the `bake` function to the unscaled data. 
+Here we have calculated the required statistics based on the data input into the 
+recipe, but the data are not yet scaled and centred. To actually scale and center 
+the data, we need to apply the bake function to the unscaled data.
+
 ```{r 05-scaling-4}
 scaled_cancer <- bake(uc_recipe, unscaled_cancer)
 scaled_cancer
 ```
 
-It may seem redundant that we had to both `bake` and `prep` to scale and center the data.
-However, we do this in two steps so we can specify a different data set in the `bake` step,
-say, new data that you want to predict, which were not part of the training set. 
+It may seem redundant that we had to both `bake` *and* `prep` to scale and center the data.
+However, we do this in two steps so we could specify a different data set in the `bake` step
+if desired, say, new data you want to predict, which were not part of the training set. 
 
 At this point, you may wonder why we are doing so much work just to center and
 scale our variables.  Can't we just manually scale and center the `Area` and
@@ -830,17 +834,19 @@ automatically apply `prep` and `bake` as necessary without additional coding eff
 
 Figure \@ref(fig:05-scaling-plt) shows the two scatter plots side-by-side&mdash;one for `unscaled_cancer` and one for
 `scaled_cancer`. Each has the same new observation annotated with its $K=3$ nearest neighbors.
-In the plot for the nonstandardized original data, you can see some odd choices
+In the original unstandardized data plot, you can see some odd choices
 for the three nearest neighbors. In particular, the "neighbors" are visually
 well within the cloud of benign observations, and the neighbors are all nearly
 vertically aligned with the new observation (which is why it looks like there
 is only one black line on this plot). Figure \@ref(fig:05-scaling-plt-zoomed)
-shows a close up of that region on the unstandardized plot. Here the computation of nearest
-neighbors is dominated by the much larger-scale area variable. On the right,
-the plot for standardized data shows a much more intuitively reasonable
+shows a close-up of that region on the unstandardized plot. Here the computation of nearest
+neighbors is dominated by the much larger-scale area variable. The plot for standardized data 
+on the right in Figure \@ref(fig:05-scaling-plt) shows a much more intuitively reasonable
 selection of nearest neighbors. Thus, standardizing the data can change things
-in an important way when we are using predictive algorithms. Standardizing your data should be a part of the preprocessing you do
-before predictive modelling and you should think your problem domain and whether you need to standardize your data. 
+in an important way when we are using predictive algorithms. 
+Standardizing your data should be a part of the preprocessing you do
+before predictive modelling and you should always think carefully about your problem domain and
+whether you need to standardize your data. 
 
 ```{r 05-scaling-plt, echo = FALSE, fig.height = 4, fig.width = 10, fig.cap = "Comparison of K = 3 nearest neighbors with standardized and unstandardized data"}
 
@@ -866,7 +872,7 @@ unscaled <- ggplot(unscaled_cancer, aes(x = Area, y = Smoothness, group = Class,
     scale_size_manual(name = "Diagnosis", 
                      labels = c("Benign", "Malignant", "Unknown"),
                      values=c(2,2,2.5)) + 
-  ggtitle("Nonstandardized Data") +
+  ggtitle("Unstandardized Data") +
   geom_segment(aes(
     x = unlist(new_obs[1]), y = unlist(new_obs[2]),
     xend = unlist(neighbors[1, attrs[1]]),
@@ -940,7 +946,7 @@ ggplot(unscaled_cancer, aes(x = Area, y = Smoothness, group = Class, color = Cla
     scale_size_manual(name = "Diagnosis", 
                      labels = c("Benign", "Malignant", "Unknown"),
                      values = c(1, 1, 2.5)) + 
-  ggtitle("Nonstandardized Data") +
+  ggtitle("Unstandardized Data") +
   geom_segment(aes(
     x = unlist(new_obs[1]), y = unlist(new_obs[2]),
     xend = unlist(neighbors[1, attrs[1]]),
@@ -1157,7 +1163,6 @@ together multiple data analysis steps without a lot of otherwise necessary code 
 To illustrate the whole pipeline, let's start from scratch with the `unscaled_wdbc.csv` data.
 First we will load the data, create a model, and specify a recipe for how the data should be preprocessed:
 ```{r 05-workflow}
-
 # load the unscaled cancer data and make sure the target Class variable is a factor
 unscaled_cancer <- read_csv("data/unscaled_wdbc.csv") |>
   mutate(Class = as_factor(Class))
@@ -1219,8 +1224,12 @@ predict the label of each, and visualize the predictions with a coloured scatter
 
 ```{r 05-workflow-fit-plot} 
 # create the grid of area/smoothness vals, and arrange in a data frame
-are_grid <- seq(min(unscaled_cancer$Area), max(unscaled_cancer$Area), length.out = 100)
-smo_grid <- seq(min(unscaled_cancer$Smoothness), max(unscaled_cancer$Smoothness), length.out = 100)
+are_grid <- seq(min(unscaled_cancer$Area), 
+                max(unscaled_cancer$Area), 
+                length.out = 100)
+smo_grid <- seq(min(unscaled_cancer$Smoothness), 
+                max(unscaled_cancer$Smoothness), 
+                length.out = 100)
 asgrid <- as_tibble(expand.grid(Area = are_grid, Smoothness = smo_grid))
 
 # use the fit workflow to make predictions at the grid points
@@ -1234,8 +1243,10 @@ prediction_table <- bind_cols(knnPredGrid, asgrid) |> rename(Class = .pred_class
 # 2. the faded coloured scatter for the grid points
 wkflw_plot <-
   ggplot() +
-  geom_point(data = unscaled_cancer, mapping = aes(x = Area, y = Smoothness, color = Class), alpha = 0.75) +
-  geom_point(data = prediction_table, mapping = aes(x = Area, y = Smoothness, color = Class), alpha = 0.02, size = 5.) +
+  geom_point(data = unscaled_cancer, 
+             mapping = aes(x = Area, y = Smoothness, color = Class), alpha = 0.75) +
+  geom_point(data = prediction_table, 
+             mapping = aes(x = Area, y = Smoothness, color = Class), alpha = 0.02, size = 5) +
   labs(color = "Diagnosis") +
   scale_color_manual(labels = c("Malignant", "Benign"), values = c("orange2", "steelblue2"))
 ```
